Sources Bugzilla – Bug 12737
arm-elf sim testsuite has "new" failures
Last modified: 2011-07-01 14:56:25 UTC
A recent change has enabled portions of the sim testsuite that were previously effectively disabled (from being gated on [istarget xscale*-*-*] which never matched, to now being gated on [istarget arm*-*-*]). Four of these new tests fail thus, configured for arm-elf and using the arm-sim board: Running /tmp/hpautotest-sim/src/sim/testsuite/sim/arm/iwmmxt/iwmmxt.exp ... FAIL: xscale wcmpgt.cgs (execution) FAIL: xscale wmac.cgs (execution) FAIL: xscale wsra.cgs (execution) Running /tmp/hpautotest-sim/src/sim/testsuite/sim/arm/misc.exp ... Running /tmp/hpautotest-sim/src/sim/testsuite/sim/arm/thumb/allthumb.exp ... Running /tmp/hpautotest-sim/src/sim/testsuite/sim/arm/xscale/xscale.exp ... WARNING: program timed out. FAIL: xscale blx.cgs (execution) Original contributor of these tests CC:ed.
CVSROOT: /cvs/src Module name: src Changes by: hp@sourceware.org 2011-05-11 04:59:28 Modified files: sim/testsuite : ChangeLog sim/testsuite/sim/arm/iwmmxt: wcmpgt.cgs wmac.cgs wsra.cgs sim/testsuite/sim/arm/xscale: blx.cgs Log message: PR sim/12737 * sim/arm/iwmmxt/wcmpgt.cgs, sim/arm/iwmmxt/wmac.cgs, sim/arm/iwmmxt/wsra.cgs, sim/arm/xscale/blx.cgs: Kfail. Patches: http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/ChangeLog.diff?cvsroot=src&r1=1.67&r2=1.68 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/iwmmxt/wcmpgt.cgs.diff?cvsroot=src&r1=1.1&r2=1.2 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/iwmmxt/wmac.cgs.diff?cvsroot=src&r1=1.1&r2=1.2 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/iwmmxt/wsra.cgs.diff?cvsroot=src&r1=1.1&r2=1.2 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/xscale/blx.cgs.diff?cvsroot=src&r1=1.1&r2=1.2
Looks like the actual cause was the same as PR gas/12931, because after an update to an assembler including that fix, the test has started kpassing. I'd like verification from an ARM person before removing the kpass and closing, though.
CVSROOT: /cvs/src Module name: src Changes by: nickc@sourceware.org 2011-07-01 12:12:17 Modified files: sim/arm : ChangeLog iwmmxt.c Log message: PR sim/12737 * iwmmxt.c (WCMPGT): Sign extend 32-bit values before performing a signed compare. (WMAC): Extend computed result before adding to result register. (WRSA): Sign extend 32-bit values before shifting. Patches: http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/arm/ChangeLog.diff?cvsroot=src&r1=1.108&r2=1.109 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/arm/iwmmxt.c.diff?cvsroot=src&r1=1.10&r2=1.11
CVSROOT: /cvs/src Module name: src Changes by: nickc@sourceware.org 2011-07-01 12:15:18 Modified files: sim/testsuite : ChangeLog sim/testsuite/sim/arm/xscale: blx.cgs sim/testsuite/sim/arm/iwmmxt: wcmpgt.cgs wmac.cgs wsra.cgs Log message: PR sim/12737 * sim/arm/iwmmxt/wcmpgt.cgs: Remove expectation of failure. * sim/arm/iwmmxt/wmac.cgs: Remove expectation of failure. * sim/arm/iwmmxt/wsra.cgs: Remove expectation of failure. * sim/arm/xscale/blx.cgs: Remove expectation of failure. Patches: http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/ChangeLog.diff?cvsroot=src&r1=1.69&r2=1.70 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/xscale/blx.cgs.diff?cvsroot=src&r1=1.2&r2=1.3 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/iwmmxt/wcmpgt.cgs.diff?cvsroot=src&r1=1.2&r2=1.3 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/iwmmxt/wmac.cgs.diff?cvsroot=src&r1=1.2&r2=1.3 http://sourceware.org/cgi-bin/cvsweb.cgi/src/sim/testsuite/sim/arm/iwmmxt/wsra.cgs.diff?cvsroot=src&r1=1.2&r2=1.3
Hi Hans-Peter, The xscale/blx.cgs test was fixed by PR12931 but the other three were not. They were all due to bugs in the ARM simulator, now fixed. Cheers Nick
(In reply to comment #5) > The xscale/blx.cgs test was fixed by PR12931 but the other three were not. Right; that one kfailed, status unchanged for the others before your sim fix. > They were all due to bugs in the ARM simulator, now fixed. Thanks!