	PR sim/12737 	* iwmmxt.c (WCMPGT): Sign extend 32-bit values before performing a 	signed compare. 	(WMAC): Extend computed result before adding to result register. 	(WRSA): Sign extend 32-bit values before shifting.